--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 manage day to day expenses.
                 </div>
                 <div class="projects-link-container link-item" data-link="projects">
-                     PROJECTS
+                     View all Projects
                 </div>
 
         </div>
@@ -195,7 +195,7 @@
                         <div class="resume-content">
                             Delhi University
                             <div>BA Economics | May 2013 -  May 2016</div>
-                           <a href="../portfolio/resume.pdf" target="_blank"> <div class="contact-submit-button "> View Full PDF</div></a> 
+                           <a href="./resume.pdf" target="_blank"> <div class="contact-submit-button "> View Full PDF</div></a> 
                         </div>
                     </div>
                 </div>
