add meta tag, fix link decorations

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Parumita Sachdeva</title>
     <link type="text/css" rel="stylesheet" href="./styles/index.css"/>
+    <meta name="viewport" content ="width=device-width",initial-scale="1.0">
 </head>
 <body>
     <div id="header">
@@ -41,6 +42,7 @@
                     all social media could be<br/>
                     responded at one place. 
                 </div>
+                <a href="https://www.behance.net/gallery/71442159/Social-Inbox-for-Viraltag" target="_blank"> <div class="CTA-button "> View More</div></a> 
 
         </div>
         <div id="gurbani-container">
@@ -53,6 +55,7 @@
                    entire library of songs, prayers, <br/>
                    books, and live streams.
                 </div>
+                 <a href="https://www.behance.net/gallery/69075911/Gurbani-Pro" target="_blank"> <div class="CTA-button2 "> View More</div></a> 
 
         </div>
         <div id="budget-container">
@@ -65,6 +68,7 @@
                 users a simple and intuitive way to<br/> 
                 manage day to day expenses.
                 </div>
+                <a href="https://www.behance.net/gallery/67958807/Budget-Management-App" target="_blank"> <div class="CTA-button3 "> View More</div></a> 
                 <div class="projects-link-container link-item" data-link="projects">
                      View all Projects
                 </div>
@@ -130,21 +134,22 @@
                 <div class="project-row clearfix">
                     <div class="project-item project-align-left">
                         <div class="project-image" id="projects-viraltag-image"></div>
-                        <div class="project-name project-name-type1">Viraltag Social Inbox</div>
+                        <a href="https://www.behance.net/gallery/71442159/Social-Inbox-for-Viraltag" target="_blank" class="customLink"><div class="project-name project-name-type1"> Viraltag Social Inbox</div></a>
+                       
                     </div>
                     <div class="project-item project-align-right">
                         <div class="project-image" id="projects-gurbani-image"></div>
-                        <div class="project-name project-name-type2">Gurbani Pro</div>
+                         <a href="https://www.behance.net/gallery/69075911/Gurbani-Pro" target="_blank" class="customLink" ><div class="project-name project-name-type2">Gurbani Pro</div></a>
                     </div>
                 </div>
                 <div class="project-row clearfix">
                     <div class="project-item project-align-left">
                         <div class="project-image" id="projects-budget-image"></div>
-                        <div class="project-name project-name-type3">Budget Management App</div>
+                        <a href="https://www.behance.net/gallery/67958807/Budget-Management-App" target="_blank" class="customLink"> <div class="project-name project-name-type3">Budget Management App</div></a>
                     </div>
                     <div class="project-item project-align-right">
                         <div class="project-image" id="projects-duolingo-image"></div>
-                        <div class="project-name project-name-type4">Duolingo Redesign</div>
+                        <a href="https://www.behance.net/gallery/63869425/Landing-page-redesign" target="_blank" class="customLink">  <div class="project-name project-name-type4">Duolingo Redesign</div></a>
                     </div>
                 </div>
             </div>
